--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,7 @@ layout: default
 	</div>
 
 	<div class="recipe-body">
-		{{ page.description | markdownify }}
+		{{ page.recipe.description | markdownify }}
 	</div>
 
 	<ul id="recipe" class="recipe-overview">
