--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,6 +15,7 @@ layout: default
 		<li title="Servings">{% include recipe-icon.html icon="quantity" %}<span>{{ page.recipe.servings }}</span></li>
 		<li title="Prep Time">{% include recipe-icon.html icon="time" %}<span>{{ page.recipe.prep }}</span></li>
 		<li title="Cook Time">{% include recipe-icon.html icon="cook" %}<span>{{ page.recipe.cook }}</span></li>
+		<li title="Difficulty"><span>{{ page.recipe.difficulty }} difficulty</span></li>
 	</ul>
 
 	<div class="recipe-contents">
