--- a/_includes/recipe-icon.html
+++ b/_includes/recipe-icon.html
@@ -45,4 +45,8 @@
 			c-0.002,0.221-0.171,0.346-0.472,0.346C16.895,9.926,14.771,9.926,12.646,9.926z"/>
 	</g>
 	</svg>
+	{% when "difficulty" %}
+                <svg fill="#000000" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid meet" viewBox="0 0 640 640" width="24" height="24"><defs>
+			<path d="M340.98 190.89L195.52 190.89L195.52 400.16L413.71 400.16L413.71 278.09L450.07 278.09L450.07 435.03L159.16 435.03L159.16 156.01L340.98 156.01L340.98 190.89ZM333.86 316.62L333.87 316.63L291.72 357.05L213.66 282.18L255.8 241.76L291.72 276.2L389.75 182.17L431.89 222.59L333.86 316.62Z" id="b164ZJKtV4"></path></defs><g><g><g><use xlink:href="#b164ZJKtV4" opacity="1" fill="#000000" fill-opacity="1"></use></g></g></g>
+                </svg>
 {% endcase %}
