--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,8 +1,7 @@
 <nav>
-	<a class="editor-link btn" href="cloudcannon:collections/_data/navigation.yml" class="btn"><strong>&#9998;</strong> Edit navigation</a>
+	<img src="{{ site.baseurl }}/images/md-logo.svg" width="100" alt="logo">
 	{% for link in site.data.navigation %}
 	{% assign class = "" %}
-
 		{% if link.link == page.url %}
 			{% assign class = class | append: " active" %}
 		{% endif %}
