--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,5 +1,5 @@
 <nav>
-	<img src="{{ site.baseurl }}/images/md-logo.svg" width="100" alt="logo">
+	<img src="{{ site.baseurl }}/images/md-color-logo.svg" width="150" height="150" alt="logo">
 	{% for link in site.data.navigation %}
 	{% assign class = "" %}
 		{% if link.link == page.url %}
