--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,6 +26,8 @@
 	</head>
 	<body>
 		{% include navigation.html %}
+		<header>&nbsp;
+		</header>		
 		<div class="container main-content">
 			<section class="content">{{ content }}</section>
 			{% include sidebar.html %}
