--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
 			</script>
 			<script async src='https://www.google-analytics.com/analytics.js'></script>
 		{% endif %}
-        <script>
+<style>
 .topnav {
   overflow: hidden;
   background-color: #333;
@@ -129,7 +129,6 @@
   }
 }
 </style>
-	</script>
 	</head>
 	<body>
 		{% include navigation.html %}
