--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -129,6 +129,16 @@
   }
 }
 </style>
+<script>
+function myFunction() {
+  var x = document.getElementById("myTopnav");
+  if (x.className === "topnav") {
+    x.className += " responsive";
+  } else {
+    x.className = "topnav";
+  }
+}
+</script>
 	</head>
 	<body>
 		{% include navigation.html %}
