--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -63,7 +63,7 @@
   padding: 14px 16px;
   background-color: inherit;
   font-family: inherit;
-  margin: 0;
+  margin: 4px;
 }
 
 .dropdown-content {
