--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,17 +1,21 @@
 <div class="topnav" id="myTopnav">
-  <a href="#home" class="active">Home</a>
-  <a href="#news">News</a>
-  <a href="#contact">Contact</a>
+  <a href="/" class="active">Home</a>
+  <a href="/recipes/">Recipes</a>
   <div class="dropdown">
     <button class="dropbtn">Dropdown 
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="#">Link 1</a>
-      <a href="#">Link 2</a>
-      <a href="#">Link 3</a>
+      <a href="/powders/">Powders</a>
+      <a href="/chutneys/">Chutneys</a>
+      <a href="/curries/">Curries</a>
+      <a href="/entrees/">Entrees</a>
+      <a href="/desserts/">Desserts</a>
+      <a href="/soups/">Soups</a>
+      <a href="/snacks/">Snacks</a>      
     </div>
   </div> 
-  <a href="#about">About</a>
+  <a href="/about/">About</a>
+  <a href="/contact/">Contact</a>
   <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
 </div>
