--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -2,7 +2,7 @@
   <a href="/" class="active">Home</a>
   <a href="/recipes/">Recipes</a>
   <div class="dropdown">
-    <button class="dropbtn">Dropdown 
+    <button class="dropbtn">By Category 
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
@@ -14,8 +14,10 @@
       <a href="/soups/">Soups</a>
       <a href="/snacks/">Snacks</a>      
     </div>
-  </div> 
-  <a href="/about/">About</a>
-  <a href="/contact/">Contact</a>
+  </div>
+  <div class="topnav-right">
+    <a href="/about/">About</a>
+    <a href="/contact/">Contact</a>
+  </div>  
   <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
 </div>
