--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -89,6 +89,10 @@
   color: white;
 }
 
+.topnav-right {
+  float: right;
+}
+
 .dropdown-content a:hover {
   background-color: #ddd;
   color: black;
