--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,8 +2,8 @@
 
 <html lang="en">
 	<head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">		
+                <meta name="viewport" content="width=device-width, initial-scale=1">
+                <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">		
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -146,7 +146,10 @@ function myFunction() {
 	</head>
 	<body>
 		{% include navigation.html %}
-		<header>&nbsp;
+		<header>
+			<a href="{{site.baseurl }}/">
+				<img src="{{ site.baseurl }}/images/md-color-logo.svg" width="150" alt="logo">
+			</a>			
 		</header>		
 		<div class="container main-content">
 			<section class="content">{{ content }}</section>
