--- a/_sass/elements.scss
+++ b/_sass/elements.scss
@@ -8,6 +8,7 @@ body, input, textarea {
 	font-family: 'Fira Sans', sans-serif;
 	color: #222;
 	-webkit-font-smoothing: antialiased;
+	text-align: justify;
 }
 
 h1 {
@@ -27,7 +28,7 @@ time {
 
 header {
 	text-align: center;
-	padding: 80px 0 60px 0;
+	padding: 0px 0 60px 0;
 }
 
 img {
