--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -35,8 +35,8 @@ layout: default
 		{{  page.recipe.preparation_details | markdownify }}
 	</div>
 	<div class="recipe-body">
-		<h2>Details</h2>
-		{{  page.recipe.actual_details | markdownify }}
+		<h2>Other Details</h2>
+		{{  page.recipe.other_details | markdownify }}
 	</div>
 	<div class="recipe-body">
 		<h2>Additional Comments</h2>
