--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -30,7 +30,7 @@ layout: default
 		</div>
 	</div>
 
-	<div class="recipe-body">
+	<div class="directions">
 			<h2>Directions</h2>
 			{{ page.recipe.directions_markdown | markdownify }}
 	</div>
