--- a/_sass/blog.scss
+++ b/_sass/blog.scss
@@ -13,6 +13,17 @@
 	}
 
 	.recipe-body {
+		ul {
+			padding: 0;
+			li {
+				list-style-type: none;
+				&:before {
+					content: '\00bb';
+					color: #ff4e4e;
+					padding-right: 0.5em;
+				}
+			}
+		}		
 		ol {
 			padding: 0;
 			li{
