--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -45,6 +45,12 @@
 	<a href="/chutneys/">Chutneys</a>
   {% endif %}
 
+  {% if page.url == "/pickles/" %}
+	<a href="/pickles/" class="active">Pickles</a>
+  {% else %}
+	<a href="/pickles/">Pickles</a>
+  {% endif %}
+
   {% if page.url == "/powders/" %}
 	<a href="/powders/" class="active">Powders</a>
   {% else %}
