--- a/_sass/blog.scss
+++ b/_sass/blog.scss
@@ -19,7 +19,7 @@
 				list-style-type: none;
 				&:before {
 					content: '\00bb';
-					color: #ff4e4e;
+					color: #4caf50;
 					padding-right: 0.5em;
 				}
 			}
@@ -35,7 +35,7 @@
 				&:before {
 					content: counter(step-counter);
 					margin-right: 0px;
-					background-color: #ff4e4e;
+					background-color: #4caf50;
 					color: white;
 					/* padding: 1px 7px; */
 					font-size: .7em;
@@ -84,7 +84,7 @@
 				list-style-type: none;
 				&:before {
 					content: '\00bb';
-					color: #ff4e4e;
+					color: #4caf50;
 					padding-right: 0.5em;
 				}
 			}
@@ -101,7 +101,7 @@
 				&:before {
 					content: counter(step-counter);
 					margin-right: 0px;
-					background-color: #ff4e4e;
+					background-color: #4caf50;
 					color: white;
 					/* padding: 1px 7px; */
 					font-size: .7em;
