--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -5,7 +5,7 @@
 
 <div class="topnav" id="myTopnav">
   <div class="dropdown">
-    <button class="dropbtn">Home
+    <button onclick="window.location.href='/'" class="dropbtn">Home
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
