--- a/_sass/pinterest.scss
+++ b/_sass/pinterest.scss
@@ -13,6 +13,7 @@ Customize these however you like.
 .imgPinWrap {
 	position: relative;
 	display: inline-block;
+	text-align: center;
 }
 
 .imgPinWrap .pin {
