--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,7 @@ layout: default
 	</div>
 
 	<div class="image">
-		<img src="{{ page.featured_image }}" alt="{{ page.title }}">
+		<img class="center" src="{{ page.featured_image }}" alt="{{ page.title }}">
 	</div>
 
 	<ul id="recipe" class="recipe-overview">
