--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -149,7 +149,7 @@ function myFunction() {
 		{% include navigation.html %}
 		<header>
 			<a href="{{site.baseurl }}/">
-				<img src="{{ site.baseurl }}/images/md-large-logo.svg" width="150" alt="logo">
+				<img src="{{ site.baseurl }}/images/md-large-logo.svg" alt="logo">
 			</a>			
 		</header>		
 		<div class="container main-content">
