--- a/_includes/post-heading.html
+++ b/_includes/post-heading.html
@@ -5,7 +5,7 @@
 {% endif %}
 <h1>
 	<a href="{{ include.post.url }}">
-		{{ include.post.title }}
+		{{ include.post.recipe.title }}
 	</a>
 </h1>
 <time datetime="{{ include.post.date | date_to_xmlschema }}">
