--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -159,7 +159,7 @@ function myFunction() {
 		<footer>
 			<div class="container">
 				<hr>
-				&copy; {{ site.title }} {{ site.time | date: "%Y" }}. All rights reserved.
+				&copy; {{ site.title }} {{ site.time | date: "%Y" }}. All rights reserved. <a href="{{ site.baseurl }}/disclaimer.html">Disclaimer</a>
 			</div>
 		</footer>
 	</body>
