--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -24,6 +24,11 @@
 	  {% else %}
 		<a href="/contact/">Contact</a>
 	  {% endif %}
+	  {% if page.url == "/disclaimer/" %}
+		<a href="/disclaimer/" class="active">Disclaimer</a>
+	  {% else %}
+		<a href="/disclaimer/">Disclaimer</a>
+	  {% endif %}
     </div>
   </div>
   
