--- a/_includes/recipe-icon.html
+++ b/_includes/recipe-icon.html
@@ -49,11 +49,7 @@
                 <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid meet" viewBox="0 0 640 640" width="20" height="20"><defs><path d="M400 80L80 80L80 560L560 560L560 280L640 280L640 640L0 640L0 0L400 0L400 80ZM384.33 368.38L384.35 368.41L291.64 461.12L119.9 289.38L212.61 196.67L291.62 275.67L507.29 60L600 152.71L384.33 368.38Z" id="didQreKON"></path></defs><g><g><g><use xlink:href="#didQreKON" opacity="1" fill="#000000" fill-opacity="1"></use></g></g></g>
                 </svg>
 	{% when "alert" %}
-		<svg fill="#FF0000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
-		  <path
-			 d="M1005.854 800.247l-438.286-767C556.173 13.30600000000004 534.967 1 512 1s-44.173 12.306-55.567 32.247l-438.286 767c-11.319 19.809-11.238 44.144 0.213 63.876C29.811 883.855 50.899 896 73.714 896h876.572c22.814 0 43.903-12.145 55.354-31.877S1017.173 820.056 1005.854 800.247zM576 768H448V640h128V768zM576 576H448V320h128V576z"
-			 id="alert"
-			 style="fill:#FF0000" />
+		<svg width="24" height="24" xmlns="http://www.w3.org/2000/svg">
+ 			<path id="alert" d="m22.96594,19.49982l-3.02367,-5.72205c-0.91163,-1.72461 -2.40272,-4.54794 -3.31435,-6.27288l-3.02339,-5.7217c-0.91253,-1.72562 -2.40362,-1.72562 -3.31494,0l-3.02278,5.7217c-0.91163,1.72494 -2.40362,4.54893 -3.31495,6.27288l-3.02309,5.72205c-0.91162,1.72627 -0.16547,3.13727 1.65748,3.13727l18.72041,0c1.82477,0 2.57,-1.41099 1.65929,-3.13727l0,0zm-10.15549,0.88582l-1.79333,0l0,-1.88142l1.79333,0l0,1.88142zm-0.0864,-3.26772l-1.619,0l-0.1609,-8.0499l1.92644,0l-0.14654,8.0499l0,0z" stroke-width="0" stroke="#f00" fill="#f00"/>
 		</svg>
-
 {% endcase %}
