--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,7 +16,7 @@ layout: default
 		<li title="Prep Time">{% include recipe-icon.html icon="time" %}<span>{{ page.recipe.prep_time }}</span></li>
 		<li title="Cook Time">{% include recipe-icon.html icon="cook" %}<span>{{ page.recipe.cook_time }}</span></li>
 		<li title="Difficulty">{% include recipe-icon.html icon="difficulty" %}<span>{{ page.recipe.difficulty }}</span></li>
-		<li title="Alert">{% include recipe-icon.html icon="alert" %}<span><a href="{{ site.baseurl }}/disclaimer/">Food Allergy Disclaimer</a></span></li>
+		<li title="Alert">{% include recipe-icon.html icon="alert" %}<span><a href="{{ site.baseurl }}/disclaimer/">Alert</a></span></li>
 	</ul>
 
 	<div class="recipe-contents">
