--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -47,6 +47,52 @@ layout: default
 		{{ content }}
 	</div>
 
+	{% if page.recipe.slideshow_images %} 
+	<script>
+	var slideIndex = 1;
+	showDivs(slideIndex);
+
+	function plusDivs(n) {
+  		showDivs(slideIndex += n);
+	}
+
+	function currentDiv(n) {
+  		showDivs(slideIndex = n);
+	}
+
+	function showDivs(n) {
+  		var i;
+  		var x = document.getElementsByClassName("mySlides");
+  		var dots = document.getElementsByClassName("demo");
+  		if (n > x.length) {slideIndex = 1}    
+  		if (n < 1) {slideIndex = x.length}
+  		for (i = 0; i < x.length; i++) {
+    			x[i].style.display = "none";  
+  		}
+  		for (i = 0; i < dots.length; i++) {
+			dots[i].className = dots[i].className.replace(" w3-red", "");
+  		}
+  		x[slideIndex-1].style.display = "block";  
+  		dots[slideIndex-1].className += " w3-red";
+	}
+	</script>
+	<noscript>Please enable JavaScript!</noscript>
+	<div class="w3-content" style="max-width:780">
+	  {% for image_url in page.recipe.slideshow_images %}
+	    <img class="mySlides" src="{{ image_url }}" style="width:100%">	
+	  {% endfor %}
+	</div>
+	<div class="w3-center">
+  	  <div class="w3-section">
+    	    <button class="w3-button w3-light-grey" onclick="plusDivs(-1)">❮ Prev</button>
+    	    <button class="w3-button w3-light-grey" onclick="plusDivs(1)">Next ❯</button>
+  	  </div>
+  	  <button class="w3-button demo" onclick="currentDiv(1)">1</button> 
+  	  <button class="w3-button demo" onclick="currentDiv(2)">2</button> 
+  	  <button class="w3-button demo" onclick="currentDiv(3)">3</button> 
+	</div>
+	{% endif %}
+	
 	<div class="sharing">
 		{% assign share_url = page.url | absolute_url | cgi_escape %}
 		<a class="facebook" href="https://www.facebook.com/sharer/sharer.php?u={{ share_url }}">{% include social-icon.html icon="Facebook" %}</a>
