--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,11 @@
 ---
 layout: default
 ---
+
+<style>
+.mySlides {display:none}
+</style>
+
 <article class="post">
 	{% include post-heading.html post=page post_page=true %}
 	<div class="recipe-body">
