--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -83,9 +83,7 @@ layout: default
 	</script>
 	<noscript>Please enable JavaScript!</noscript>
 	<div class="w3-content" style="max-width:780">
-	  {% for image_url in page.recipe.slideshow_images %}
-	    <img class="mySlides" src="{{ image_url }}" style="width:100%">	
-	  {% endfor %}
+	  {% for image_url in page.recipe.slideshow_images %}<img class="mySlides" src="{{ image_url }}" style="width:100%">{% endfor %}
 	</div>
 	<div class="w3-center">
   	  <div class="w3-section">
