--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
                 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">		
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" href="http://www.mallikasdishes.com/css/w3.css">
 
 		{% seo %}
 		{% feed_meta %}
