--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -52,7 +52,7 @@ layout: default
 	</div>
 
 	{% if page.recipe.slideshow_images %}
-	<h2>Additional Pictures {{ page.recipe.slideshow_images.size }} </h2> 
+	<h2>Additional Pictures </h2> 
 	<div class="w3-content" style="max-width:780">
 	  {% for image_url in page.recipe.slideshow_images %}<img class="mySlides" src="{{ image_url }}" style="width:100%">{% endfor %}
 	</div>
@@ -61,9 +61,11 @@ layout: default
     	    <button class="w3-button w3-light-grey" onclick="plusDivs(-1)">❮ Prev</button>
     	    <button class="w3-button w3-light-grey" onclick="plusDivs(1)">Next ❯</button>
   	  </div>
-  	  <button class="w3-button demo" onclick="currentDiv(1)">1</button> 
-  	  <button class="w3-button demo" onclick="currentDiv(2)">2</button> 
-  	  <button class="w3-button demo" onclick="currentDiv(3)">3</button> 
+          {% assign i = 0 %}
+	  {% for image in page.recipe.slideshow_images %}
+		{% assign i = i | plus:1 %}
+		<button class="w3-button demo" onclick="currentDiv({{ i }})">{{ i }}</button>
+	  {% endfor %}
 	</div>
 	<script>
 	var slideIndex = 1;
