--- a/css/w3.css
+++ b/css/w3.css
@@ -13,7 +13,7 @@
 }
 .w3-red, .w3-hover-red:hover {
 	color: #fff!important;
-	background-color: #f44336!important;
+	background-color: #4CAF50!important;
 }
 .w3-section {
 	margin-top: 16px!important;
