--- a/css/w3.css
+++ b/css/w3.css
@@ -11,6 +11,12 @@
 .w3-center {
 	text-align: center!important;
 }
+
+.w3-light-grey {
+  color: #000!important;
+  background-color: #f1f1f1!important;
+}
+
 .w3-red, .w3-hover-red:hover {
 	color: #fff!important;
 	background-color: #4CAF50!important;
